# timetable-generator

./: .clang-format  CMakeLists.txt  README.md
include/: course.hpp  generator.hpp
src/: main.cpp
